# hndigest

./: .gitignore  CLAUDE.md  pyproject.toml
hn_digest/: __init__.py  __main__.py  categorize.py  cli.py  config.py  content.py  formatter.py  hn.py  http.py  process.py  telegram.py  translate.py
hndigest/: __init__.py  __main__.py  categorize.py  cli.py  config.py  content.py  formatter.py  hn.py  http.py  process.py  telegram.py  translate.py
